--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </a>
 
 <a href="hindi.html" class="card">
-  <img src="https://i.ibb.co/9HFkBc4R/dcvslsg.jpg" alt="Sample Image" />
+  <img src="https://i.ibb.co/nsbXrJHH/x.jpg" alt="Sample Image" />
   <div class="card-content">
     <div class="card-title">Match no 1 Hindi</div>
   </div>
