--- a/hindi.html
+++ b/hindi.html
@@ -43,38 +43,12 @@
     <script src="https://cdn.jsdelivr.net/npm/disable-devtool"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://content.jwplatform.com/libraries/KB5zFt7A.js"></script>
+    <script src="playerjs2.js"></script>
     <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="b9273d3d-d002-4a94-bce7-a6310ff2b104";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
-    
+
     <style>
       body {
         text-align: center;
-      }
-      #wrapper {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 20px auto;
-      }
-      .jwplayer {
-        height: 300px !important;
-      }
-      iframe {
-        width: 100%;
-        height: 500px;
-        border: none;
-        overflow: hidden;
-      }
-      .responsive-gif {
-        display: block;
-        width: 100%;
-      }
-      .responsive-gif img {
-        display: block;
-        width: 100%;
-        height: 250px;
-        max-height: 300px;
-        border-radius: 50px;
-        object-fit: cover;
       }
     </style>
   </head>
@@ -92,126 +66,89 @@
         alt="Animated GIF"
       />
     </a>
-   
+    <script async="async" data-cfasync="false" src="//solemnbible.com/2dfd44a3ba0b9b3c202550d835c5558c/invoke.js"></script>
+    <div id="container-2dfd44a3ba0b9b3c202550d835c5558c"></div>
     <h1>ipl 2025 live</h1>
-    <h2>DC VS lsg</h2>
+    <h2>gt vs pbks</h2>
     <br />
 
     <h3>only for mobile</h3>
 
     <h3>player 1</h3>
 <br>
-<iframe 
-    src="hindi4kplayerjs.html" 
-    width="100%" 
-    height="400" 
-    allowfullscreen="true"
-    webkitallowfullscreen="true"
-    mozallowfullscreen="true"
-    style="border: none; overflow: hidden;"
-></iframe>
+<div id="player"></div>
+
+<script>
+  var player = new Playerjs({
+    id: "player",
+    file: "match1.txt"
+  });
+</script>
 <br>
 <br>
-player 2
+<h3>Player 2</h3>
 <br>
 <br>
-    <div id="player"></div>
-    <script src="https://content.jwplatform.com/libraries/KB5zFt7A.js"></script>
-    <script>
-      const playerInstance = jwplayer("player").setup({
-        controls: true,
-        displaytitle: true,
-        autoplay: false,
-        displaydescription: true,
-        abouttext: "",
-        aboutlink: "https://telegram.me/NEWBIEN00B", // Updated Telegram channel link
-        skin: {
-          name: "netflix",
-        },
-        logo: {
-          file: "",
-          link: "https://telegram.me/NEWBIEN00B", // Updated Telegram channel link
-        },
-        captions: {
-          color: "#FFF",
-          fontSize: 14,
-          backgroundOpacity: 0,
-          edgeStyle: "raised",
-        },
-        playlist: [
-          {
-            image: "",
-            sources: [
-              {
-                file: "https://customer-0agod1prlrzpzm4j.cloudflarestream.com/bd4f2a7e5c120843b0c06f9bb992fec9/manifest/video.m3u8",
-                label: "1080p",
-                default: true,
-              },
-            ],
-          },
-        ],
-        advertising: {
-          client: "vast",
-          schedule: [
-            {
-              offset: "pre",
-              tag: "",
-            },
-          ],
-        },
-      });
+<div id="player2"></div>
+<script>
+  const playerInstance2 = jwplayer("player2").setup({
+    width: "100%",
+    height: "100%",
+    aspectratio: "16:9",
+    controls: true,
+    displaytitle: true,
+    autoplay: false,
+    displaydescription: true,
+    abouttext: "Follow us on Telegram",
+    aboutlink: "https://telegram.me/NEWBIEN00B",
+    skin: {
+      name: "netflix"
+    },
+    captions: {
+      color: "#FFF",
+      fontSize: 14,
+      backgroundOpacity: 0,
+      edgeStyle: "raised"
+    },
+    playlist: [{
+      sources: [{
+        file: "https://customer-0agod1prlrzpzm4j.cloudflarestream.com/bd4f2a7e5c120843b0c06f9bb992fec9/manifest/video.m3u8",
+        label: "1080p",
+        default: true
+      }]
+    }],
+    events: {
+      onError: function(e) {
+        console.error("Player 2 error:", e);
+      }
+    }
+  });
 
-      playerInstance.on("ready", function () {
-        const playerContainer = playerInstance.getContainer();
-        const buttonContainer = playerContainer.querySelector(
-          ".jw-button-container"
-        );
+  // Add rewind functionality
+  playerInstance2.on("ready", function() {
+    const playerContainer = playerInstance2.getContainer();
+    const buttonContainer = playerContainer.querySelector(".jw-button-container");
 
-        // Rewind button functionality
-        const rewindContainer = playerContainer.querySelector(
-          ".jw-display-icon-rewind"
-        );
-        const rewindButton = rewindContainer.cloneNode(true);
-        const rewindIcon = rewindButton.querySelector(".jw-icon-rewind");
-        rewindIcon.style.transform = "scaleX(1)";
-        rewindIcon.ariaLabel = "Rewind 10 Seconds";
+    // Add rewind button
+    const rewindButton = document.createElement("div");
+    rewindButton.className = "jw-icon jw-icon-rewind";
+    rewindButton.setAttribute("role", "button");
+    rewindButton.setAttribute("aria-label", "Rewind 10 Seconds");
 
-        const nextContainer = playerContainer.querySelector(
-          ".jw-display-icon-next"
-        );
-        nextContainer.parentNode.insertBefore(rewindButton, nextContainer);
+    rewindButton.onclick = () => {
+      const currentPosition = playerInstance2.getPosition();
+      const newPosition = Math.max(currentPosition - 10, 0);
+      playerInstance2.seek(newPosition);
+    };
 
-        // Rewind functionality for the control bar
-        const rewindControlBarButton =
-          buttonContainer.querySelector(".jw-icon-rewind");
-        const rewindControlBarClone = rewindControlBarButton.cloneNode(true);
-        rewindControlBarClone.style.transform = "scaleX(1)";
-        rewindControlBarClone.ariaLabel = "Rewind 10 Seconds";
-        buttonContainer.insertBefore(
-          rewindControlBarClone,
-          buttonContainer.firstChild
-        );
-
-        // On click of rewind button, seek backward by 10 seconds
-        [rewindButton, rewindControlBarClone].forEach((button) => {
-          button.onclick = () => {
-            const currentPosition = playerInstance.getPosition();
-            const newPosition = Math.max(currentPosition - 10, 0); // Prevent going below 0
-            playerInstance.seek(newPosition);
-          };
-        });
-      });
-    </script>
-                   <br>
-<a href="https://lnk.bio/NEWBIENOOB" class="responsive">
-    <img
-        src="https://i.ibb.co/q3rNH8dY/1.png"
-        alt="Animated Image"
-    />
-</a>
-
-<br>                                            <br>
-
+    buttonContainer.insertBefore(rewindButton, buttonContainer.firstChild);
+  });
+</script>
+<br>
+<br>                                          
+<script async="async" data-cfasync="false" src="//solemnbible.com/2dfd44a3ba0b9b3c202550d835c5558c/invoke.js"></script>
+<div id="container-2dfd44a3ba0b9b3c202550d835c5558c"></div>
+<br>
  <h3>player 3</h3>
                                                              <br>
     <iframe
@@ -305,7 +242,10 @@ player 2
       };
       document.head.appendChild(jwScriptHindi);
     </script>
-
+<br>
+<script async="async" data-cfasync="false" src="//solemnbible.com/2dfd44a3ba0b9b3c202550d835c5558c/invoke.js"></script>
+<div id="container-2dfd44a3ba0b9b3c202550d835c5558c"></div>
+<br>
     <h2>Geosuper</h2>
     <div id="wrapper">
       <iframe
@@ -349,7 +289,7 @@ player 2
               },
               pip: true,
               controls: true,
-              title: "tsports,
+              title: "tsports",
               quality: {
                   defaultAuto: true
               }
