css add code update

--- a/hindi.html
+++ b/hindi.html
@@ -66,8 +66,21 @@
         alt="Animated GIF"
       />
     </a>
-    <script async="async" data-cfasync="false" src="//solemnbible.com/2dfd44a3ba0b9b3c202550d835c5558c/invoke.js"></script>
-    <div id="container-2dfd44a3ba0b9b3c202550d835c5558c"></div>
+<div class="ad-container">
+  <script type="text/javascript">
+    atOptions = {
+      'key': '298dd1d057c5989868e5263359d59608',
+      'format': 'iframe',
+      'height': 90,
+      'width': 728,
+      'params': {}
+    };
+  </script>
+  <script type="text/javascript" src="//solemnbible.com/298dd1d057c5989868e5263359d59608/invoke.js"></script>
+</div>
+  
+    <script type="text/javascript" src="//solemnbible.com/298dd1d057c5989868e5263359d59608/invoke.js"></script>
+
     <h1>ipl 2025 live</h1>
     <h2>gt vs pbks</h2>
     <br />
