follow us modal update

--- a/hindi4k.html
+++ b/hindi4k.html
@@ -299,29 +299,27 @@
       <span class="close-button">&times;</span>
       <h2>Follow Us</h2>
       <p class="blue-text">Connect with us on social media:</p>
-      <div class="social-icons">
-        <a href="https://www.linkedin.com/in/newbienoob/" target="_blank">
-          <i class="ci ci-linkedin ci-2x"></i>
-          <span class="platform-name">LinkedIn</span>
-        </a>
-        <a href="https://github.com/NOOBGLITCH" target="_blank">
-          <i class="ci ci-github ci-2x"></i>
-          <span class="platform-name">GitHub</span>
-        </a>
-        <a href="https://www.instagram.com/NEWBIENOOBO" target="_blank">
-          <i class="ci ci-instagram ci-2x"></i>
-          <span class="platform-name">Instagram</span>
-        </a>
-        <a href="https://x.com/NEWBIENOOBO" target="_blank">
-          <i class="ci ci-twitter ci-2x"></i>
-          <span class="platform-name">Twitter</span>
-        </a>
-        <br />
-        <a href="https://telegram.me/newbienoobbot" target="_blank">
-          <i class="ci ci-telegram ci-2x"></i>
-          <span class="platform-name">Telegram</span>
-        </a>
-      </div>
+      <a href="https://www.linkedin.com/in/newbienoob/" target="_blank">
+        <img src="https://i.ibb.co/Rk5LY4Kk/linkedin.png" style="height: 40px; vertical-align: middle; margin-right: 5px;" alt="LinkedIn"/>
+      
+      </a>
+      <a href="https://github.com/NOOBGLITCH" target="_blank">
+        <img src="https://i.ibb.co/VWntHwKD/github.png" style="height: 45px; vertical-align: middle;" alt="GitHub"/>
+        
+      </a>
+ 
+      <a href="https://www.instagram.com/NEWBIENOOBO" target="_blank">
+        <img src="https://i.ibb.co/Fbs4Ct9C/inastagram.png" style="height: 45px; vertical-align: middle; margin-right: 5px;" alt="Instagram"/>
+
+      </a>
+      <a href="https://x.com/NEWBIENOOBO" target="_blank">
+        <img src="https://i.ibb.co/xtJgXtD9/twitter.png" style="height: 40px; vertical-align: middle; margin-right: 5px;" alt="Twitter"/>
+      </a>
+
+      <a href="https://telegram.me/newbienoobbot" target="_blank">
+        <img src="https://i.ibb.co/ks9HGdCS/telegram.png" style="height: 40px; vertical-align: middle; margin-right: 5px;" alt="Telegram"/>
+  
+      </a>
     </div>
   </div>
 
