--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
       <div class="card-title">Telegram</div>
     </div>
   </a>
+  
   <a href="https://github.com/NOOBGLITCH" class="card">
     <img src="https://i.pinimg.com/564x/b5/1b/78/b51b78ecc9e5711274931774e433b5e6.jpg" alt="Sample Image" />
     <div class="card-content">
@@ -87,7 +88,11 @@
     </div>
   </a>
 
-
+  <p align="center">
+    <img src="https://svgwithtext.vercel.app/?social=facebook&text=Your-text" alt="Facebook Badge" style="margin: 5px;">
+    <img src="https://svgwithtext.vercel.app/?social=instagram&text=Frost_Prism" alt="Instagram Badge" style="margin: 5px;">
+    <img src="https://svgwithtext.vercel.app/?social=telegram&text=Prime_Hritu" alt="Telegram Badge" style="margin: 5px;">
+  </p>
 
   <h2>This website was developed by <a href="https://github.com/NEWBIENOOB-0">NEWBIENOOB-0</a>.</h2>
   <script src="//jwpsrv.com/library/O4mPlqeTEeK_viIACpYGxA.js"></script>
