--- a/hindi.html
+++ b/hindi.html
@@ -82,7 +82,11 @@
   <br>
   <br>
   <h3>Player 2</h3>
+  <iframe src="https://ok.ru/videoembed/9823236333233?autoplay=1&amp;mute=0" width="100%" height="100%" frameborder="0" allowfullscreen="" allow="autoplay">
+  </iframe>
   <br>
+  <br>
+  <h3>Player 3</h3>
   <br>
   <div id="player2"></div>
   <script>
@@ -107,7 +111,7 @@
       },
       playlist: [{
         sources: [{
-          file: "https://mtsft.ruscfd.lat/720p.m3u8",
+          file: "https://xhls.embedxt.site/hls/live.mpd",
           label: "1080p",
           default: true
         }]
@@ -141,18 +145,18 @@
   </script>
   <br>
   <br>
-  <h3>player 3</h3>
+  <h3>player 4</h3>
   <br>
   <iframe src="https://ifram.embedxt.site/iframe/frame.php" width="600" height="400" frameborder="0" allowfullscreen
     sandbox="allow-scripts allow-same-origin"></iframe>
 
   <br>
   <br>
-  <h3>Player 4</h3>
+  <h3>Player 5</h3>
   <br>
   <iframe src="player.html" width="600" height="400" frameborder="0" allowfullscreen></iframe>
   <br>
-  <h3>Player 5</h3>
+  <h3>Player 6</h3>
   <br>
   <div id="wrapper">
     <div id="pcPlayer"></div>
