--- a/hindi.html
+++ b/hindi.html
@@ -82,7 +82,7 @@
   <br>
   <br>
   <h3>Player 2</h3>
-  <iframe src="https://ok.ru/videoembed/9823236333233?autoplay=1&amp;mute=0" width="100%" height="100%" frameborder="0" allowfullscreen="" allow="autoplay">
+  <iframe src="https://ok.ru/videoembed/9823236333233" width="100%" height="100%" frameborder="0" allowfullscreen="">
   </iframe>
   <br>
   <br>
