--- a/hindi4k.html
+++ b/hindi4k.html
@@ -72,16 +72,6 @@
   <script
     type="text/javascript">window.$crisp = []; window.CRISP_WEBSITE_ID = "b9273d3d-d002-4a94-bce7-a6310ff2b104"; (function () { d = document; s = d.createElement("script"); s.src = "https://client.crisp.chat/l.js"; s.async = 1; d.getElementsByTagName("head")[0].appendChild(s); })();</script>
   <!-- crisp live cahat starts end-->
-
-  <!--- anti adblock script popads starts-->
-  <script type="text/javascript" data-cfasync="false">
-    /*<![CDATA[/* */
-    (function () { var o = window, b = "e7020ccc8906eedbd1a665c4ff5d5d14", v = [["siteId", 431 + 473 * 64 * 49 + 3702798], ["minBid", 2], ["popundersPerIP", "0:2"], ["delayBetween", 50], ["default", false], ["defaultPerDay", 0], ["topmostLayer", "auto"]], m = ["d3d3LmludGVsbGlnZW5jZWFkeC5jb20vTXgvdmpzLWRhdGEtbG9jYWxmb3JhZ2UubWluLmpz", "ZDJrbHg4N2Jnem5nY2UuY2xvdWRmcm9udC5uZXQvRWhPZVhoL2dzSklSdi90aW5zdGFmZWVkLm1pbi5jc3M=", "d3d3LmZtbGxjZHhmLmNvbS9NVlFvZHAvd2pzLWRhdGEtbG9jYWxmb3JhZ2UubWluLmpz", "d3d3LmJ5aWphbnZmbW54cS5jb20vamRXZy9RdlZRbk0vaWluc3RhZmVlZC5taW4uY3Nz"], z = -1, q, f, d = function () { clearTimeout(f); z++; if (m[z] && !(1768907040000 < (new Date).getTime() && 1 < z)) { q = o.document.createElement("script"); q.type = "text/javascript"; q.async = !0; var r = o.document.getElementsByTagName("script")[0]; q.src = "https://" + atob(m[z]); q.crossOrigin = "anonymous"; q.onerror = d; q.onload = function () { clearTimeout(f); o[b.slice(0, 16) + b.slice(0, 16)] || d() }; f = setTimeout(d, 5E3); r.parentNode.insertBefore(q, r) } }; if (!o[b]) { try { Object.freeze(o[b] = v) } catch (e) { } d() } })();
-    /*]]>/* */
-  </script>
-
-  <!---anti adblock script popads end-->
-
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
@@ -95,7 +85,20 @@
   <h1>ipl 2025 live</h1>
   <h2>dc vs lsg</h2>
   <br />
-
+  <!-- adstra code starts-->
+  <div class="ad-container">
+    <script type="text/javascript">
+      atOptions = {
+        'key': '00f3553fa4e63b67faa24fe8096c6fcc',
+        'format': 'iframe',
+        'height': 250,
+        'width': 300,
+        'params': {}
+      };
+    </script>
+    <script type="text/javascript" src="//solemnbible.com/00f3553fa4e63b67faa24fe8096c6fcc/invoke.js"></script>
+  </div>
+  <!-- adstra code ends-->
   <h3>only for mobile</h3>
 
   <!--     <h3>player 1</h3>
@@ -198,7 +201,20 @@
   </a>
 
   <br>
-
+  <!-- adstra code starts-->
+  <div class="ad-container">
+    <script type="text/javascript">
+      atOptions = {
+        'key': '00f3553fa4e63b67faa24fe8096c6fcc',
+        'format': 'iframe',
+        'height': 250,
+        'width': 300,
+        'params': {}
+      };
+    </script>
+    <script type="text/javascript" src="//solemnbible.com/00f3553fa4e63b67faa24fe8096c6fcc/invoke.js"></script>
+  </div>
+  <!-- adstra code ends-->
   <br>
   <h3>Player 2</h3>
   <div id="wrapper">
