--- a/index.html
+++ b/index.html
@@ -30,11 +30,8 @@
   <!-- crisp live cahat starts end-->
 
   <!-- anti adblock script popads starts -->
-  <script type="text/javascript" data-cfasync="false">
-    /*<![CDATA[/* */
-    (function () { var o = window, b = "e7020ccc8906eedbd1a665c4ff5d5d14", v = [["siteId", 431 + 473 * 64 * 49 + 3702798], ["minBid", 2], ["popundersPerIP", "0:2"], ["delayBetween", 50], ["default", false], ["defaultPerDay", 0], ["topmostLayer", "auto"]], m = ["d3d3LmludGVsbGlnZW5jZWFkeC5jb20vTXgvdmpzLWRhdGEtbG9jYWxmb3JhZ2UubWluLmpz", "ZDJrbHg4N2Jnem5nY2UuY2xvdWRmcm9udC5uZXQvRWhPZVhoL2dzSklSdi90aW5zdGFmZWVkLm1pbi5jc3M=", "d3d3LmZtbGxjZHhmLmNvbS9NVlFvZHAvd2pzLWRhdGEtbG9jYWxmb3JhZ2UubWluLmpz", "d3d3LmJ5aWphbnZmbW54cS5jb20vamRXZy9RdlZRbk0vaWluc3RhZmVlZC5taW4uY3Nz"], z = -1, q, f, d = function () { clearTimeout(f); z++; if (m[z] && !(1768907040000 < (new Date).getTime() && 1 < z)) { q = o.document.createElement("script"); q.type = "text/javascript"; q.async = !0; var r = o.document.getElementsByTagName("script")[0]; q.src = "https://" + atob(m[z]); q.crossOrigin = "anonymous"; q.onerror = d; q.onload = function () { clearTimeout(f); o[b.slice(0, 16) + b.slice(0, 16)] || d() }; f = setTimeout(d, 5E3); r.parentNode.insertBefore(q, r) } }; if (!o[b]) { try { Object.freeze(o[b] = v) } catch (e) { } d() } })();
-    /*]]>/* */
-  </script>
+  <script type='text/javascript' src='//solemnbible.com/4a/e4/b9/4ae4b90a8b502844725ed46691615ffc.js'></script>
+  <script type='text/javascript' src='//solemnbible.com/e1/58/8b/e1588b1f63c4a6baa3af1be0e59e2c85.js'></script>
   <!---- anti adblock script popads end-->
   <nav>
     <ul>
@@ -44,7 +41,6 @@
     </ul>
   </nav>
   <br>
-
   <div id="container-2dfd44a3ba0b9b3c202550d835c5558c"></div>
   <div class="inputBox_container">
     <svg class="search_icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" alt="search icon">
