--- a/hindi.html
+++ b/hindi.html
@@ -149,19 +149,19 @@
     });
   </script>
   <br>
-    <!-- adstra code starts-->
-    <div class="ad-container">
-      <script type="text/javascript">
-        atOptions = {
-          'key': '00f3553fa4e63b67faa24fe8096c6fcc',
-          'format': 'iframe',
-          'height': 250,
-          'width': 300,
-          'params': {}
-        };
-      </script>
-      <script type="text/javascript" src="//solemnbible.com/00f3553fa4e63b67faa24fe8096c6fcc/invoke.js"></script>
-    </div>
+  <!-- adstra code starts-->
+  <div class="ad-container2">
+    <script type="text/javascript">
+      atOptions = {
+        'key' : 'c7f084c8714ec976c64b3e9313ff23ac',
+        'format' : 'iframe',
+        'height' : 90,
+        'width' : 728,
+        'params' : {}
+      };
+    </script>
+    <script type="text/javascript" src="//solemnbible.com/c7f084c8714ec976c64b3e9313ff23ac/invoke.js"></script>
+  </div>
     <!-- adstra code ends-->
   <br>
   </div>
