--- a/index.html
+++ b/index.html
@@ -29,10 +29,7 @@
     type="text/javascript">window.$crisp = []; window.CRISP_WEBSITE_ID = "b9273d3d-d002-4a94-bce7-a6310ff2b104"; (function () { d = document; s = d.createElement("script"); s.src = "https://client.crisp.chat/l.js"; s.async = 1; d.getElementsByTagName("head")[0].appendChild(s); })();</script>
   <!-- crisp live cahat starts end-->
 
-  <!-- anti adblock script popads starts -->
-  <script type='text/javascript' src='//solemnbible.com/4a/e4/b9/4ae4b90a8b502844725ed46691615ffc.js'></script>
-  <script type='text/javascript' src='//solemnbible.com/e1/58/8b/e1588b1f63c4a6baa3af1be0e59e2c85.js'></script>
-  <!---- anti adblock script popads end-->
+
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
@@ -50,11 +47,21 @@
     </svg>
     <input class="inputBox" id="inputBox" type="text" placeholder="Search For Languages">
   </div>
-  <br>
-  <a href="https://lnk.bio/NEWBIENOOB" class="responsive">
-    <img src="https://i.ibb.co/q3rNH8dY/1.png" alt="Animated Image" />
-  </a>
 
+  <!-- adstra code starts-->
+<div class="ad-container">
+  <script type="text/javascript">
+    atOptions = {
+      'key': '00f3553fa4e63b67faa24fe8096c6fcc',
+      'format': 'iframe',
+      'height': 250,
+      'width': 300,
+      'params': {}
+    };
+  </script>
+  <script type="text/javascript" src="//solemnbible.com/00f3553fa4e63b67faa24fe8096c6fcc/invoke.js"></script>
+</div>
+<!-- adstra code ends-->
   <br>
   <a href="http://telegram.dog/NEWBIEN00B" class="card">
     <img src="https://i.ibb.co/MFngWCb/tg.jpg" alt="Sample Image" />
