--- a/hindi4k.html
+++ b/hindi4k.html
@@ -202,17 +202,17 @@
 
   <br>
   <!-- adstra code starts-->
-  <div class="ad-container">
+  <div class="ad-container2">
     <script type="text/javascript">
       atOptions = {
-        'key': '00f3553fa4e63b67faa24fe8096c6fcc',
-        'format': 'iframe',
-        'height': 250,
-        'width': 300,
-        'params': {}
+        'key' : 'c7f084c8714ec976c64b3e9313ff23ac',
+        'format' : 'iframe',
+        'height' : 90,
+        'width' : 728,
+        'params' : {}
       };
     </script>
-    <script type="text/javascript" src="//solemnbible.com/00f3553fa4e63b67faa24fe8096c6fcc/invoke.js"></script>
+    <script type="text/javascript" src="//solemnbible.com/c7f084c8714ec976c64b3e9313ff23ac/invoke.js"></script>
   </div>
   <!-- adstra code ends-->
   <br>
