--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   </a>
 
   <a href="hindi.html" class="card">
-    <img src="https://i.ibb.co/cSnNkc6h/rrvskkr.jpg" alt="Sample Image" />
+    <img src="https://i.ibb.co/s9HxSyg1/1000107762-imresizer.png" alt="Sample Image" />
     <div class="card-content">
       <div class="card-title">Match no 1 Hindi</div>
     </div>
