--- a/hindi.html
+++ b/hindi.html
@@ -56,7 +56,7 @@
   </div>
 
   <h1>ipl 2025 live</h1>
-  <h2>rr vs kkr</h2>
+  <h2>srh vs lsg</h2>
   <br />
    <!-- adstra code starts-->
    <div class="ad-container">
@@ -116,7 +116,7 @@
       },
       playlist: [{
         sources: [{
-          file: "https://xhls.embedxt.site/hls/live.mpd",
+          file: "https://myctxa.temycssme.wiki/720p.m3u8",
           label: "1080p",
           default: true
         }]
@@ -174,10 +174,6 @@
   <br>
   <br>
   <h3>Player 5</h3>
-  <br>
-  <iframe src="player.html" width="600" height="400" frameborder="0" allowfullscreen></iframe>
-  <br>
-  <h3>Player 6</h3>
   <br>
   <div id="wrapper">
     <div id="pcPlayer"></div>
@@ -252,10 +248,6 @@
   <br>
 
   <br>
-  <h2>Geosuper</h2>
-  <div id="wrapper">
-    <iframe src="willowsports.html" frameborder="0" allowfullscreen width="100%" height="100%"></iframe>
-  </div>
 
   <h2>WPL Server</h2>
   <div id="wrapper">
