--- a/hindi.html
+++ b/hindi.html
@@ -56,7 +56,7 @@
   </div>
 
   <h1>ipl 2025 live</h1>
-  <h2>srh vs lsg</h2>
+  <h2>rcb vs csk</h2>
   <br />
    <!-- adstra code starts-->
    <div class="ad-container">
@@ -81,7 +81,8 @@
   <script>
     var player = new Playerjs({
       id: "player",
-      file: "match1.txt"
+      file: "match1.txt",
+      poster: "https://i.ibb.co/1G4N2fgF/welocome-to-our-website.png" 
     });
   </script>
   <br>
