--- a/jwplayer.html
+++ b/jwplayer.html
@@ -31,18 +31,12 @@
 
         jwScript.onload = function() {
             var playerInstance = jwplayer("player").setup({
- file: "https://otte.live.fly.ww.aiv-cdn.net/pdx-nitro/live/clients/dash/enc/cw64xbclda/out/v1/190f1d69a3d5467f8fb7d9df4339bc49/cenc.mpd",
+                file: "https://myctxa.temycssme.wiki/720p.m3u8",
                 width: "100%",
                 height: "100%",
                 aspectratio: '16:9',
                 preload: 'metadata',
                 autostart: false,
-                 drm: {
-                clearkey: {
-                    key: '1819c82fc27225f5e79ae189ddece0ea',
-                    keyId: '7aa124253d518f18740c5bd932d581a3'
-                }
-            },
                 fallback: {
                     message: "Your browser does not support the video format or the player."
                 },
@@ -54,7 +48,7 @@
                 },
                 pip: true,
                 controls: true,
-                title: "amazon prime"
+                title: "jiohotstar hindi"
             });
 
             playerInstance.on('controls', function(event) {
