--- a/hindi.html
+++ b/hindi.html
@@ -88,67 +88,11 @@
   <br>
   <br>
   <h3>Player 2</h3>
-  <iframe src="https://ok.ru/videoembed/9823236333233" width="100%" height="100%" frameborder="0" allowfullscreen="">
+  <iframe src="jwplayer.html" width="100%" height="100%" frameborder="0" allowfullscreen="">
   </iframe>
-  <br>
-  <br>
   <h3>Player 3</h3>
   <br>
-  <div id="player2"></div>
-  <script>
-    const playerInstance2 = jwplayer("player2").setup({
-      width: "100%",
-      height: "100%",
-      aspectratio: "16:9",
-      controls: true,
-      displaytitle: true,
-      autoplay: false,
-      displaydescription: true,
-      abouttext: "Follow us on Telegram",
-      aboutlink: "https://telegram.me/NEWBIEN00B",
-      skin: {
-        name: "netflix"
-      },
-      captions: {
-        color: "#FFF",
-        fontSize: 14,
-        backgroundOpacity: 0,
-        edgeStyle: "raised"
-      },
-      playlist: [{
-        sources: [{
-          file: "https://myctxa.temycssme.wiki/720p.m3u8",
-          label: "1080p",
-          default: true
-        }]
-      }],
-      events: {
-        onError: function (e) {
-          console.error("Player 2 error:", e);
-        }
-      }
-    });
 
-    // Add rewind functionality
-    playerInstance2.on("ready", function () {
-      const playerContainer = playerInstance2.getContainer();
-      const buttonContainer = playerContainer.querySelector(".jw-button-container");
-
-      // Add rewind button
-      const rewindButton = document.createElement("div");
-      rewindButton.className = "jw-icon jw-icon-rewind";
-      rewindButton.setAttribute("role", "button");
-      rewindButton.setAttribute("aria-label", "Rewind 10 Seconds");
-
-      rewindButton.onclick = () => {
-        const currentPosition = playerInstance2.getPosition();
-        const newPosition = Math.max(currentPosition - 10, 0);
-        playerInstance2.seek(newPosition);
-      };
-
-      buttonContainer.insertBefore(rewindButton, buttonContainer.firstChild);
-    });
-  </script>
   <br>
   <!-- adstra code starts-->
   <div class="ad-container2">
