--- a/hindi.html
+++ b/hindi.html
@@ -90,7 +90,12 @@
   <h3>Player 2</h3>
   <iframe src="jwplayer.html" width="100%" height="100%" frameborder="0" allowfullscreen="">
   </iframe>
+  <br>
+  <br>
   <h3>Player 3</h3>
+  <br>
+  <iframe src="https://vk.com/video_ext.php?oid=889693256&id=456239035&hd" width="100%" height="100%" frameborder="0" allowfullscreen=""></iframe>
+  <h3>Player 4</h3>
   <br>
 
   <br>
@@ -111,14 +116,14 @@
   <br>
   </div>
   <br>
-  <h3>player 4</h3>
+  <h3>player 5</h3>
   <br>
   <iframe src="https://ifram.embedxt.site/iframe/frame.php" width="600" height="400" frameborder="0" allowfullscreen
     sandbox="allow-scripts allow-same-origin"></iframe>
 
   <br>
   <br>
-  <h3>Player 5</h3>
+  <h3>Player 6</h3>
   <br>
   <div id="wrapper">
     <div id="pcPlayer"></div>
@@ -194,7 +199,7 @@
 
   <br>
 
-  <h2>WPL Server</h2>
+  <!-- <h2>WPL Server</h2> -->
   <div id="wrapper">
     <div id="pcPlayer"></div>
   </div>
