--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   </a>
 
   <a href="hindi.html" class="card">
-    <img src="https://i.ibb.co/B5FM8zPH/IMG-20250328-WA0024.jpg" alt="Sample Image" />
+    <img src="https://i.ibb.co/HD52yVk6/gtvs-mi.jpg" alt="Sample Image" />
     <div class="card-content">
       <div class="card-title">Match no 1 Hindi</div>
     </div>
