--- a/hindi.html
+++ b/hindi.html
@@ -56,7 +56,7 @@
   </div>
 
   <h1>ipl 2025 live</h1>
-  <h2>rcb vs csk</h2>
+  <h2>gt vs mi</h2>
   <br />
    <!-- adstra code starts-->
    <div class="ad-container">
@@ -75,6 +75,7 @@
   <h3>only for mobile</h3>
 
   <h3>player 1</h3>
+  <h2>📌note: please cheack all servers and players multiple servers addedd</h2>
   <br>
   <div id="player"></div>
 
@@ -88,14 +89,17 @@
   <br>
   <br>
   <h3>Player 2</h3>
+<br>
+</iframe>
   <iframe src="jwplayer.html" width="100%" height="100%" frameborder="0" allowfullscreen="">
   </iframe>
   <br>
   <br>
   <h3>Player 3</h3>
   <br>
+  <br>
   <iframe src="https://vk.com/video_ext.php?oid=889693256&id=456239035&hd" width="100%" height="100%" frameborder="0" allowfullscreen=""></iframe>
-  <h3>Player 4</h3>
+  <h3>Player 5</h3>
   <br>
 
   <br>
@@ -115,15 +119,17 @@
     <!-- adstra code ends-->
   <br>
   </div>
+<br>
+  <h2>📌note: please cheack all servers and players multiple servers addedd</h2>
   <br>
-  <h3>player 5</h3>
+  <h3>player 6</h3>
   <br>
   <iframe src="https://ifram.embedxt.site/iframe/frame.php" width="600" height="400" frameborder="0" allowfullscreen
     sandbox="allow-scripts allow-same-origin"></iframe>
-
   <br>
+  <h2>📌note: please cheack all servers and players multiple servers addedd</h2>
   <br>
-  <h3>Player 6</h3>
+  <h3>Player 7</h3>
   <br>
   <div id="wrapper">
     <div id="pcPlayer"></div>
@@ -198,7 +204,6 @@
   <br>
 
   <br>
-
   <!-- <h2>WPL Server</h2> -->
   <div id="wrapper">
     <div id="pcPlayer"></div>
