--- a/playercopy.html
+++ b/playercopy.html
@@ -1,74 +1,69 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8">
-  <title>Video Player</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://content.jwplatform.com/libraries/SAHhwvZq.js"></script>
- <style>
- #message,.telegram-toggle{color:#fff;align-items:center;z-index:1001;display:flex;position:fixed}.popup a,.telegram-toggle,.tg-banner{text-decoration:none}body{margin:0;font-family:'Helvetica Neue',Arial,sans-serif;background-color:#f4f4f4;overflow:hidden}.jwplayer{position:absolute!important}.jwplayer.jw-flag-aspect-mode{min-height:100%;max-height:100%}.telegram-toggle{top:10px;right:10px;background-color:#08c;padding:10px 15px;border-radius:50px;font-weight:700}.telegram-toggle img{width:20px;height:20px;margin-right:5px}#message{top:0;left:0;width:100%;height:100%;background-color:rgba(0,0,0,.8);justify-content:center;font-size:24px}.popup{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);background-color:#1c1c1c;border-radius:10px;padding:20px;text-align:center;box-shadow:0 0 15px rgba(255,255,255,.2);z-index:1002;width:90%;max-width:400px;animation:.5s fadeIn}.popup h2{color:#fc0;margin-bottom:10px;font-size:20px}.popup p{margin-bottom:20px;color:#ccc;font-size:16px}.popup button{background-color:#08c;color:#fff;border:none;padding:10px;border-radius:5px;cursor:pointer;transition:background-color .3s;margin-bottom:10px;width:100%}.popup button:hover{background-color:#069}.popup .close-btn{background-color:#555}.popup .close-btn:hover{background-color:#333}.popup a{color:#fc0}@keyframes fadeIn{from{opacity:0}to{opacity:1}}@media (max-width:600px){.popup{width:90%}.popup h2{font-size:18px}.popup p{font-size:14px}.popup button{padding:10px}}.tg-banner{position:absolute;top:10px;left:10px;background:linear-gradient(135deg,#1da1f2,#0077b5);border-radius:8px;padding:8px 12px;display:flex;align-items:center;color:#fff;box-shadow:0 4px 10px rgba(0,0,0,.3);z-index:1000;transition:transform .3s,box-shadow .3s}.tg-banner:hover{transform:translateY(-3px);box-shadow:0 4px 15px rgba(0,0,0,.4)}.tg-banner img{width:24px;height:24px;margin-right:8px;border-radius:50%;border:1px solid #fff}.tg-banner span{font-size:14px;font-weight:600;letter-spacing:.3px}
+  <meta name="theme-color" content="black">
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8003681892226291"
+    crossorigin="anonymous"></script>
+  <script disable-devtool-auto src='#https://cdn.jsdelivr.net/npm/disable-devtool@latest'></script>
+  <meta name="viewport" content="width=720, user-scalable=no">
+  <meta property="og:image"
+    content="https://encrypted-tbn0static.com/images?q=tbn:ANd9GcQq-VwWgAPYQ70k1R60meu_P-lN85uhvxb1Hg&usqp=CAU">
+  <meta property="og:title" content="LIVE Streaming by @dtv_hindi | PERMANENT LIVE">
+  <meta property="og:description"
+    content="Official World Cup website - live matches, scores, news, highlights, commentary, rankings, videos and fixtures from the International Cricket Council.">
+  <meta property="og:url" content="https://tvxd.digitaltrend.in/streaming.html">
+  <title> mirror</title>
+  <script src="adblocker.js"></script>
+  <style>
+    .player {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      background-color: black;
+    }
+
+
+    iframe {
+      width: 100% !important;
+      height: 100% !important;
+    }   
   </style>
+
 </head>
 
-<body>
-  <div id="jwplayerDiv"></div>
- <a href="https://t.me/+-WnkhEw6S05jOWZh" class="tg-banner">
-        <img src="https://i.pinimg.com/originals/31/2a/f9/312af9235aadad69655688eaee97eabf.png" alt="Telegram logo">
-        <span>
-            Join @thecricsters
-        </span>
-    </a>
-  <script type="text/javascript">
-    jwplayer("jwplayerDiv").setup({
-      file: "https://vvvv-two.vercel.app/1033.m3u8",
-      type: "hls",
-      autostart: true,
-      width: "100%"
-    });
+<body style="background-color:black;">
 
-    window.addEventListener("load", function () {
-      if (window.confirm("Join @thecricsters for more updates?")) {
-        window.location.href = "https://t.me/+uBrjQXMdNqxkOWVl";
-      }
-    });
-  </script>
-<script>
-      if (window.top !== window.self) {
-        window.addEventListener('DOMContentLoaded', function() {
-          document.body.innerHTML = '<div id="message">Ab to copy mat kar chutiye</div>';
-        });
-      }
 
-      // Display a modern pop-up message when the page starts
-      window.addEventListener("load", function() {
-        // Create the popup element
-        var popup = document.createElement("div");
-        popup.className = "popup";
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <center>
+    <div class="player">
+      <iframe src="https://vimeo.com/event/5009603/embed" frameborder="0"
+        allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+      <!--<iframe src="https://player.cricktv.site/jwplayer?dtv=https://v18tataplaysyndication.akamaized.net/bpk-tv/Sports18_1_HD_voot_MOB/output03/hdntl=exp=1742805440~acl=%2f*~data=hdntl~hmac=24e057ab54bf39f13b16c10788bd963dbfaa09f86808363b26c4c4b2d1eef590/Sports18_1_HD_voot_MOB/video.m3u8" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen ></iframe>
+-->
+    </div>
 
-        // Set the popup content
-        popup.innerHTML = `
-          <h2>Support Us!</h2>
-          <p>Join our Telegram channel <br>@thecricsters for more updates.</p>
-          <button id="joinButton">Join Now and support us</button>
-          <button id="closeButton" class="close-btn">Already Joined</button>
-        `;
 
-        // Append the popup to the body
-        document.body.appendChild(popup);
 
-        // Add click event to the Join Now button
-        document.getElementById("joinButton").addEventListener("click", function() {
-          window.location.href = "https://t.me/+uBrjQXMdNqxkOWVl";
-        });
-
-        // Add click event to the Already Joined button to close the popup
-        document.getElementById("closeButton").addEventListener("click", function() {
-          document.body.removeChild(popup);
-        });
-      });
-</script>
+  </p>
+  <!--<center>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3501680502223299" crossorigin="anonymous"></script>
+     1st 
+    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3501680502223299" data-ad-slot="8156595764" data-ad-format="auto" data-full-width-responsive="true"></ins>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </center>-->
+  </br>
+  <!-- Cloudflare Pages Analytics -->
+  <script defer src='https://static.cloudflareinsights.com/beacon.min.js'
+    data-cf-beacon='{"token": "28d3b64c41d840bfa1ef0adf1d4b2a8c"}'></script><!-- Cloudflare Pages Analytics -->
 </body>
 
 </html>
