--- a/hindi.html
+++ b/hindi.html
@@ -95,14 +95,6 @@
   </iframe>
   <br>
   <br>
-  <h3>Player 3</h3>
-  <br>
-  <br>
-  <iframe src="https://vk.com/video_ext.php?oid=889693256&id=456239035&hd" width="100%" height="100%" frameborder="0" allowfullscreen=""></iframe>
-  <h3>Player 5</h3>
-  <br>
-
-  <br>
   <!-- adstra code starts-->
   <div class="ad-container2">
     <script type="text/javascript">
@@ -122,14 +114,14 @@
 <br>
   <h2>📌note: please cheack all servers and players multiple servers addedd</h2>
   <br>
-  <h3>player 6</h3>
+  <h3>player 3</h3>
   <br>
   <iframe src="https://ifram.embedxt.site/iframe/frame.php" width="600" height="400" frameborder="0" allowfullscreen
     sandbox="allow-scripts allow-same-origin"></iframe>
   <br>
   <h2>📌note: please cheack all servers and players multiple servers addedd</h2>
   <br>
-  <h3>Player 7</h3>
+  <h3>Player 4</h3>
   <br>
   <div id="wrapper">
     <div id="pcPlayer"></div>
@@ -275,6 +267,14 @@
 
   <br />
   <br />
+  <h2>📌note: please cheack all servers and players multiple servers addedd</h2>
+  <h3>player 5</h3>
+  <br>
+  </iframe>
+    <iframe src="willowsports.html" width="100%" height="100%" frameborder="0" allowfullscreen="">
+    </iframe>
+    <br>
+    <br>
   <h2>
     Developed by <a href="https://github.com/NEWBIENOOB-0">NEWBIENOOB-0</a>
   </h2>
