more server added

--- a/playercopy.html
+++ b/playercopy.html
@@ -4,66 +4,61 @@
 <head>
   <meta charset="UTF-8">
   <meta name="theme-color" content="black">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8003681892226291"
-    crossorigin="anonymous"></script>
-  <script disable-devtool-auto src='#https://cdn.jsdelivr.net/npm/disable-devtool@latest'></script>
-  <meta name="viewport" content="width=720, user-scalable=no">
-  <meta property="og:image"
-    content="https://encrypted-tbn0static.com/images?q=tbn:ANd9GcQq-VwWgAPYQ70k1R60meu_P-lN85uhvxb1Hg&usqp=CAU">
+  <title>DTV HINDI LIVE STREAM HD Hindi</title>
+
+  <!-- Open Graph Meta -->
+  <meta property="og:image" content="https://encrypted-tbn0static.com/images?q=tbn:ANd9GcQq-VwWgAPYQ70k1R60meu_P-lN85uhvxb1Hg&usqp=CAU">
   <meta property="og:title" content="LIVE Streaming by @dtv_hindi | PERMANENT LIVE">
-  <meta property="og:description"
-    content="Official World Cup website - live matches, scores, news, highlights, commentary, rankings, videos and fixtures from the International Cricket Council.">
+  <meta property="og:description" content="Official World Cup website - live matches, scores, news, highlights, commentary, rankings, videos and fixtures from the International Cricket Council.">
   <meta property="og:url" content="https://tvxd.digitaltrend.in/streaming.html">
-  <title> mirror</title>
-  <script src="adblocker.js"></script>
+
+  <!-- Ads -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8003681892226291" crossorigin="anonymous"></script>
+  
+  <!-- JS Libraries -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+
+  <!-- Custom CSS -->
   <style>
-    .player {
-      position: absolute;
-      width: 100%;
+    html, body {
+      margin: 0;
+      padding: 0;
       height: 100%;
-      overflow: hidden;
       background-color: black;
     }
 
+    .player {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+    }
 
-    iframe {
-      width: 100% !important;
-      height: 100% !important;
-    }   
+    .player iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
   </style>
-
 </head>
 
-<body style="background-color:black;">
+<body>
 
+  <div class="player">
+    <iframe src="https://vimeo.com/event/5009603/embed"
+      allow="autoplay; fullscreen; picture-in-picture"
+      allowfullscreen>
+    </iframe>
+  </div>
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <center>
-    <div class="player">
-      <iframe src="https://vimeo.com/event/5009603/embed" frameborder="0"
-        allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-      <!--<iframe src="https://player.cricktv.site/jwplayer?dtv=https://v18tataplaysyndication.akamaized.net/bpk-tv/Sports18_1_HD_voot_MOB/output03/hdntl=exp=1742805440~acl=%2f*~data=hdntl~hmac=24e057ab54bf39f13b16c10788bd963dbfaa09f86808363b26c4c4b2d1eef590/Sports18_1_HD_voot_MOB/video.m3u8" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen ></iframe>
--->
-    </div>
-
-
-
-  </p>
-  <!--<center>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3501680502223299" crossorigin="anonymous"></script>
-     1st 
-    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3501680502223299" data-ad-slot="8156595764" data-ad-format="auto" data-full-width-responsive="true"></ins>
-    <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-  </center>-->
-  </br>
-  <!-- Cloudflare Pages Analytics -->
-  <script defer src='https://static.cloudflareinsights.com/beacon.min.js'
-    data-cf-beacon='{"token": "28d3b64c41d840bfa1ef0adf1d4b2a8c"}'></script><!-- Cloudflare Pages Analytics -->
 </body>
-
 </html>
