--- a/hindi.html
+++ b/hindi.html
@@ -275,6 +275,14 @@
     </iframe>
     <br>
     <br>
+    <h2>📌note: please cheack all servers and players multiple servers addedd</h2>
+  <h3>player 5</h3>
+  <br>
+  </iframe>
+    <iframe src="playercopy.html"100%" height="100%" frameborder="0" allowfullscreen="">
+    </iframe>
+    <br>
+    <br>
   <h2>
     Developed by <a href="https://github.com/NEWBIENOOB-0">NEWBIENOOB-0</a>
   </h2>
