--- a/playerjs.html
+++ b/playerjs.html
@@ -6,34 +6,42 @@
     <title>Sports Stream Player</title>
     <script src="playerjs2.js"></script>
     <meta http-equiv="Access-Control-Allow-Origin" content="*">
+    <!-- Adstra popunder script -->
+    <script type='text/javascript' src='//solemnbible.com/4a/e4/b9/4ae4b90a8b502844725ed46691615ffc.js'></script>
     <style>
-  #player {
-    height: 100%;
-    width: 100%;
-    border: 2px solid red;
-    margin: 0;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 9999;
-  }
+      #player {
+        height: 100%;
+        width: 100%;
+        border: 2px solid red;
+        margin: 0;
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 9999;
+      }
 
-  html, body {
-    height: 100%;               /* Ensure html and body take up the full screen height */
-    margin: 0;                 /* Remove default body margin */
-    padding: 0;                /* Remove default body padding */
-    overflow: hidden;           /* Prevent scrollbar */
-  }
-</style>
+      html, body {
+        height: 100%;               /* Ensure html and body take up the full screen height */
+        margin: 0;                 /* Remove default body margin */
+        padding: 0;                /* Remove default body padding */
+        overflow: hidden;           /* Prevent scrollbar */
+      }
+    </style>
   </head>
   <body>
-    <div id="player"></div>
+        <!-- Adstra popunder script -->
+        <script type='text/javascript' src='//solemnbible.com/4a/e4/b9/4ae4b90a8b502844725ed46691615ffc.js'></script>
+     <!-- Adstra social bar script -->
+     <script type='text/javascript' src='//solemnbible.com/e1/58/8b/e1588b1f63c4a6baa3af1be0e59e2c85.js'></script>
 
+    <div id="player"></div>
     <script>
       var player = new Playerjs({
         id: "player",
         file: "match1.txt"
       });
     </script>
+    <!-- Adstra social bar script -->
+    <script type='text/javascript' src='//solemnbible.com/e1/58/8b/e1588b1f63c4a6baa3af1be0e59e2c85.js'></script>
   </body>
 </html>
