--- a/hindi.html
+++ b/hindi.html
@@ -116,8 +116,8 @@
   <br>
   <h3>player 3</h3>
   <br>
-  <iframe src="https://ifram.embedxt.site/iframe/frame.php" width="600" height="400" frameborder="0" allowfullscreen
-    sandbox="allow-scripts allow-same-origin"></iframe>
+  <iframe src="https://ifram.embedxt.site/iframe/frame.php" title="Video Player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="">
+  </iframe>
   <br>
   <h2>📌note: please cheack all servers and players multiple servers addedd</h2>
   <br>
@@ -270,7 +270,6 @@
   <h2>📌note: please cheack all servers and players multiple servers addedd</h2>
   <h3>player 5</h3>
   <br>
-  </iframe>
     <iframe src="willowsports.html" width="100%" height="100%" frameborder="0" allowfullscreen="">
     </iframe>
     <br>
@@ -278,9 +277,8 @@
     <h2>📌note: please cheack all servers and players multiple servers addedd</h2>
   <h3>player 5</h3>
   <br>
+  <iframe src="playercopy.html" title="Video Player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="">
   </iframe>
-    <iframe src="playercopy.html"100%" height="100%" frameborder="0" allowfullscreen="">
-    </iframe>
     <br>
     <br>
   <h2>
